--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <scope>runtime</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
+        </dependency>
+
     </dependencies>
 
     <build>
